--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -9,9 +9,9 @@
 <table id="owners" class="table table-striped">
     <thead>
     <tr>
-        <td style="width: 150px">ID</td>
-        <td style="width: 150px">First Name</td>
-        <td style="width: 150px">Last Name</td>
+        <th style="width: 150px">ID</th>
+        <th style="width: 150px">First Name</th>
+        <th style="width: 150px">Last Name</th>
     </tr>
     </thead>
     <tbody>
